// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllPlacements 1`] = `
<div>
  <div
    class="mb-12"
  >
    <span
      class="inline-flex cursor-pointer items-center"
    >
      top
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="inline-flex cursor-pointer items-center"
    >
      bottom
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="inline-flex cursor-pointer items-center"
    >
      left
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="inline-flex cursor-pointer items-center"
    >
      right
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <span
    class="inline-flex cursor-pointer items-center"
  >
    hover me
  </span>
</div>
`;
